<?xml version="1.0" encoding="utf-8"?>
<androidx.coordinatorlayout.widget.CoordinatorLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/main"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".MainActivity"
    android:background="@color/orange">

    <androidx.constraintlayout.widget.ConstraintLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:id="@+id/clWrapper">

        <androidx.constraintlayout.widget.ConstraintLayout
            android:layout_width="200dp"
            android:layout_height="wrap_content"
            app:layout_constraintTop_toTopOf="parent"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintEnd_toEndOf="parent"

            android:text="@string/app_name"
            android:textSize="30sp">
            <TextView
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:id="@+id/tvImages"
                app:layout_constraintTop_toTopOf="parent"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintBottom_toTopOf="@id/tvJokes"
                android:theme="@style/Theme.AndroidLab4.Buttons"
                android:layout_marginBottom="16dp"
                android:text="@string/tvImages"/>

            <TextView
                android:id="@+id/tvJokes"
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:text="@string/tvJokes"
                android:theme="@style/Theme.AndroidLab4.Buttons"
                app:layout_constraintTop_toBottomOf="@id/tvImages"
                app:layout_constraintBottom_toTopOf="@id/tvOmens"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintStart_toStartOf="parent"
                android:layout_marginBottom="16dp"
                 />

            <TextView
                android:id="@+id/tvOmens"
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:text="@string/tvOmens"
                android:theme="@style/Theme.AndroidLab4.Buttons"
                app:layout_constraintTop_toBottomOf="@id/tvJokes"
                app:layout_constraintBottom_toTopOf="@id/tvQuotes"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintStart_toStartOf="parent"
                android:layout_marginBottom="16dp"
                 />

            <TextView
                android:id="@+id/tvQuotes"
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:text="@string/tvQuotes"
                android:theme="@style/Theme.AndroidLab4.Buttons"
                app:layout_constraintTop_toBottomOf="@id/tvOmens"
                app:layout_constraintBottom_toTopOf="@id/tvSeaImages"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintStart_toStartOf="parent"
                android:layout_marginBottom="16dp"
                />

            <TextView
                android:id="@+id/tvSeaImages"
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:text="@string/tvSeaImages"
                android:theme="@style/Theme.AndroidLab4.Buttons"
                app:layout_constraintTop_toBottomOf="@id/tvQuotes"
                app:layout_constraintBottom_toTopOf="@id/tvEmotes"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintStart_toStartOf="parent"
                android:layout_marginBottom="16dp"
                />

            <TextView
                android:id="@+id/tvEmotes"
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:text="@string/tvEmotes"
                android:theme="@style/Theme.AndroidLab4.Buttons"
                app:layout_constraintTop_toBottomOf="@id/tvSeaImages"
                app:layout_constraintBottom_toTopOf="@id/tvAbout"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintStart_toStartOf="parent"
                android:layout_marginBottom="16dp"
                />

            <TextView
                android:id="@+id/tvAbout"
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:text="@string/tvAbout"
                android:theme="@style/Theme.AndroidLab4.Buttons"
                app:layout_constraintTop_toBottomOf="@id/tvEmotes"
                app:layout_constraintBottom_toBottomOf="parent"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintStart_toStartOf="parent"
                android:layout_marginBottom="16dp"
                />

        </androidx.constraintlayout.widget.ConstraintLayout>
    </androidx.constraintlayout.widget.ConstraintLayout>

</androidx.coordinatorlayout.widget.CoordinatorLayout>